// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routeLadder displays loading if we are fetching the timepoints 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  loading...
</DocumentFragment>
`;

exports[`routeLadder displays no crowding data for a bus coming off a route with no crowding data onto a route with crowding data 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
    <button
      class="c-route-ladder__crowding-toggle c-route-ladder__crowding-toggle--hide"
    >
      <span
        class="c-route-ladder__crowding-toggle-icon c-route-ladder__crowding-toggle-icon"
      >
        <svg />
      </span>
      Hide riders
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-27.5)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--small"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="40"
            x="-20"
            y="6.6"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--extended"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="12.1"
          >
            14/18
          </text>
          <g
            class="c-ladder__crowding c-ladder__crowding--some-crowding"
            transform="scale(0.38) translate(-24,-30)"
          >
            <rect
              fill="transparent"
              height="52"
              width="52"
              x="-2"
              y="-2"
            />
            <path
              d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
            />
            <circle
              cx="6.74"
              cy="8.54"
              r="4.93"
            />
            <path
              d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
            />
            <circle
              cx="23.88"
              cy="8.48"
              r="4.93"
            />
            <path
              d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
            />
            <circle
              cx="41.03"
              cy="8.48"
              r="4.93"
            />
          </g>
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  >
    <button
      class="c-incoming-box__vehicle"
    >
      <div
        class="c-incoming-box__vehicle-icon"
      >
        <svg
          style="width: 16.72px; height: 15.2px;"
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <g
            class="c-vehicle-icon c-vehicle-icon--small"
          >
            <g
              class="c-ladder__crowding c-ladder__crowding--no-data"
              transform="scale(0.38) translate(-24,-14)"
            >
              <rect
                fill="transparent"
                height="52"
                width="52"
                x="-2"
                y="-2"
              />
              <path
                d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
              />
              <circle
                cx="6.74"
                cy="8.54"
                r="4.93"
              />
              <path
                d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
              />
              <circle
                cx="23.88"
                cy="8.48"
                r="4.93"
              />
              <path
                d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
              />
              <circle
                cx="41.03"
                cy="8.48"
                r="4.93"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="c-incoming-box__vehicle-label"
      >
        ?/?
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`routeLadder does not include the detour dropdown if the 'RouteLadderHeaderDropdown' group is absent 1`] = `
<div>
  <div
    class="c-new-route-ladder__header card"
  >
    <div
      class="card-body"
    >
      <div
        class="c-route-ladder__header__action-container"
      />
      <div
        class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
      >
        28
      </div>
      <div
        class="c-route-ladder__close-button-container"
      >
        <button
          aria-label="Close"
          class="btn-close p-2"
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</div>
`;

exports[`routeLadder doesn't display crowding data for a vehicle coming off a route with crowding data onto a route with none 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-27.5)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="11.5"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="17"
          >
            1
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            class="c-vehicle-icon__variant"
            dominant-baseline="alphabetic"
            text-anchor="middle"
            x="0"
            y="8.5"
          >
            4
          </text>
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  >
    <button
      class="c-incoming-box__vehicle"
    >
      <div
        class="c-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style="width: 16.72px; height: 15.2px;"
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            class="c-vehicle-icon c-vehicle-icon--small on-time early-red"
          >
            <path
              class="c-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(0.38) rotate(180) translate(-24,-22)"
            />
          </g>
        </svg>
      </div>
      <div
        class="c-incoming-box__vehicle-label"
      >
        2
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`routeLadder doesn't render a bus that's off-course but nonrevenue 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-27.5)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="11.5"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="17"
          >
            1
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            class="c-vehicle-icon__variant"
            dominant-baseline="alphabetic"
            text-anchor="middle"
            x="0"
            y="8.5"
          >
            4
          </text>
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</DocumentFragment>
`;

exports[`routeLadder renders a route ladder 1`] = `
<div>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</div>
`;

exports[`routeLadder renders a route ladder with crowding instead of vehicles 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
    <button
      class="c-route-ladder__crowding-toggle c-route-ladder__crowding-toggle--hide"
    >
      <span
        class="c-route-ladder__crowding-toggle-icon c-route-ladder__crowding-toggle-icon"
      >
        <svg />
      </span>
      Hide riders
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-27.5)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--small"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="40"
            x="-20"
            y="6.6"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--extended"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="12.1"
          >
            14/18
          </text>
          <g
            class="c-ladder__crowding c-ladder__crowding--some-crowding"
            transform="scale(0.38) translate(-24,-30)"
          >
            <rect
              fill="transparent"
              height="52"
              width="52"
              x="-2"
              y="-2"
            />
            <path
              d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
            />
            <circle
              cx="6.74"
              cy="8.54"
              r="4.93"
            />
            <path
              d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
            />
            <circle
              cx="23.88"
              cy="8.48"
              r="4.93"
            />
            <path
              d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
            />
            <circle
              cx="41.03"
              cy="8.48"
              r="4.93"
            />
          </g>
        </g>
      </g>
      <g
        class="c-ladder__vehicle"
        transform="translate(-63,-110)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--small"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="-17.6"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="-12.100000000000001"
          >
            ?/?
          </text>
          <g
            class="c-ladder__crowding c-ladder__crowding--no-data"
            transform="scale(0.38) translate(-24,-14)"
          >
            <rect
              fill="transparent"
              height="52"
              width="52"
              x="-2"
              y="-2"
            />
            <path
              d="M6.74,16.17A6.86,6.86,0,0,0-.12,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.42,3.42,0,0,0,3.42-3.42V23A6.87,6.87,0,0,0,6.74,16.17Z"
            />
            <circle
              cx="6.74"
              cy="8.54"
              r="4.93"
            />
            <path
              d="M23.88,16.17A6.86,6.86,0,0,0,17,23h0V40.8a3.43,3.43,0,0,0,3.43,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23a6.86,6.86,0,0,0-6.86-6.86Z"
            />
            <circle
              cx="23.88"
              cy="8.48"
              r="4.93"
            />
            <path
              d="M41,16.17A6.87,6.87,0,0,0,34.17,23V40.8a3.42,3.42,0,0,0,3.42,3.42h6.86a3.43,3.43,0,0,0,3.43-3.42V23A6.86,6.86,0,0,0,41,16.17Z"
            />
            <circle
              cx="41.03"
              cy="8.48"
              r="4.93"
            />
          </g>
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</DocumentFragment>
`;

exports[`routeLadder renders a route ladder with laying over vehicles 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <g
        class="c-ladder__vehicle"
        transform="translate(0,-35)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--small on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="7.359999999999999"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="12.86"
          >
            2
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.38) rotate(270) translate(-24,-22)"
          />
        </g>
      </g>
      <g
        class="c-ladder__vehicle"
        transform="translate(0,-85)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--small on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="7.359999999999999"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="12.86"
          >
            1
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
          <text
            class="c-vehicle-icon__variant"
            dominant-baseline="central"
            text-anchor="start"
            x="-5.6"
            y="0"
          >
            4
          </text>
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</DocumentFragment>
`;

exports[`routeLadder renders a route ladder with the new header and detour dropdown 1`] = `
<div>
  <div
    class="c-new-route-ladder__header card"
  >
    <div
      class="card-body"
    >
      <div
        class="c-route-ladder__header__action-container"
      >
        <div
          class="border-box inherit-box dropdown"
        >
          <button
            aria-expanded="false"
            class="c-route-ladder__dropdown-button dropdown-toggle btn btn-primary"
            id="react-aria-:r0:"
            type="button"
          >
            <span
              class="visually-hidden"
            >
              Route Options
            </span>
          </button>
        </div>
      </div>
      <div
        class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
      >
        28
      </div>
      <div
        class="c-route-ladder__close-button-container"
      >
        <button
          aria-label="Close"
          class="btn-close p-2"
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</div>
`;

exports[`routeLadder renders a route ladder with the new header format 1`] = `
<div>
  <div
    class="c-new-route-ladder__header card"
  >
    <div
      class="card-body"
    >
      <div
        class="c-route-ladder__header__action-container"
      />
      <div
        class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
      >
        28
      </div>
      <div
        class="c-route-ladder__close-button-container"
      >
        <button
          aria-label="Close"
          class="btn-close p-2"
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</div>
`;

exports[`routeLadder renders a route ladder with vehicles 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__scheduled-line on-time early-red"
        x1="-63"
        x2="-40"
        y1="-110"
        y2="-110"
      />
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-27.5)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="11.5"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="17"
          >
            1
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            class="c-vehicle-icon__variant"
            dominant-baseline="alphabetic"
            text-anchor="middle"
            x="0"
            y="8.5"
          >
            4
          </text>
        </g>
      </g>
      <g
        class="c-ladder__vehicle"
        transform="translate(63,-110)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--medium c-vehicle-icon--highlighted ghost early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="11.5"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="17"
          >
            0123
          </text>
          <g
            transform="scale(0.4375) translate(-24,-23)"
          >
            <path
              class="c-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-linejoin="round"
            />
            <path
              class="c-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-linejoin="round"
            />
            <ellipse
              class="c-vehicle-icon__ghost-eye"
              cx="19.73"
              cy="22.8"
              rx="3.11"
              ry="3.03"
            />
            <ellipse
              class="c-vehicle-icon__ghost-eye"
              cx="35.29"
              cy="22.8"
              rx="3.11"
              ry="3.03"
            />
          </g>
          <g
            transform="translate(9.375, -6.25) scale(0.2) translate(-24, -24)"
          >
            <g
              class="c-icon-alert-circle--highlighted"
            >
              <circle
                class="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                class="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                class="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
      <g
        class="c-ladder__vehicle"
        transform="translate(-63,-110)"
      >
        <g
          class="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            class="c-vehicle-icon__label-background"
            height="11"
            rx="5.5"
            ry="5.5"
            width="26"
            x="-13"
            y="-22.5"
          />
          <text
            class="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominant-baseline="central"
            text-anchor="middle"
            x="0"
            y="-17"
          >
            2
          </text>
          <path
            class="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  />
</DocumentFragment>
`;

exports[`routeLadder renders a route ladder with vehicles in the incoming box 1`] = `
<DocumentFragment>
  <div
    class="c-route-ladder__header"
  >
    <div
      class="c-route-ladder__close-button-container"
    >
      <button
        aria-label="Close"
        class="c-close-button c-close-button--large c-close-button--darker"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <div
    class="c-route-ladder__controls"
  >
    <button
      class="c-route-ladder__reverse"
    >
      <span
        class="c-route-ladder__reverse-icon"
      >
        <svg />
      </span>
      Reverse
    </button>
  </div>
  <div
    class="c-ladder"
    style="width: 184px;"
  >
    <svg
      class="c-ladder__svg"
      height="0"
      viewBox="-92 -55 184 0"
      width="184"
    >
      <line
        class="c-ladder__line"
        x1="-40"
        x2="-40"
        y1="0"
        y2="-110"
      />
      <line
        class="c-ladder__line"
        x1="40"
        x2="40"
        y1="0"
        y2="-110"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="0"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="0"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="0"
      >
        MATPN
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-55"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-55"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-55"
      >
        WELLH
      </text>
      <circle
        class="c-ladder__stop-circle"
        cx="-40"
        cy="-110"
        r="3"
      />
      <circle
        class="c-ladder__stop-circle"
        cx="40"
        cy="-110"
        r="3"
      />
      <text
        class="c-ladder__timepoint-name"
        dominant-baseline="middle"
        text-anchor="middle"
        x="0"
        y="-110"
      >
        MORTN
      </text>
    </svg>
  </div>
  <div
    class="c-incoming-box"
  >
    <button
      class="c-incoming-box__vehicle"
    >
      <div
        class="c-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style="width: 16.72px; height: 15.2px;"
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            class="c-vehicle-icon c-vehicle-icon--small on-time early-red"
          >
            <path
              class="c-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(0.38) rotate(0) translate(-24,-22)"
            />
            <text
              class="c-vehicle-icon__variant"
              dominant-baseline="alphabetic"
              text-anchor="middle"
              x="0"
              y="5.6"
            >
              4
            </text>
          </g>
        </svg>
      </div>
      <div
        class="c-incoming-box__vehicle-label"
      >
        1
      </div>
    </button>
    <button
      class="c-incoming-box__vehicle"
    >
      <div
        class="c-incoming-box__vehicle-icon"
      >
        <svg
          role="img"
          style="width: 16.72px; height: 15.2px;"
          viewBox="-8.36 -7.6 16.72 15.2"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            class="c-vehicle-icon c-vehicle-icon--small on-time early-red"
          >
            <path
              class="c-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(0.38) rotate(180) translate(-24,-22)"
            />
          </g>
        </svg>
      </div>
      <div
        class="c-incoming-box__vehicle-label"
      >
        2
      </div>
    </button>
  </div>
</DocumentFragment>
`;
